samples/_failures_safe/1761542684_2ee56e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f1df7d0.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_1f1df7d0.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
